--- a/index.html
+++ b/index.html
@@ -36,19 +36,6 @@ background-color: #4682b4;
       }
 
    
-   
-   .header img {
-  float: left;
-  width: 100px;
-  height: 100px;
-  background: #555;
-}
-
-.header h1 {
-  position: relative;
-  top: 18px;
-  left: 10px;
-}
 
 
 </style>
@@ -56,11 +43,6 @@ background-color: #4682b4;
 </head>
 
 <body>
-
-   <div class="header">
-  <img src="{{url_for('static', filename='photos/ice.jpg')}}" alt="logo" />
-  <h1>Twitter Freeze</h1>
-   </div>
    
 <!--   
   <img src="{{url_for('static', filename='photos/ice.jpg')}}" />
@@ -69,17 +51,20 @@ background-color: #4682b4;
   </div>
 -->
 
+   <h1>Twitter Freeze</h1>
+   
 <!--
   <p> <img src="{{url_for('static', filename='photos/sea.jpg')}}"></p>
 -->
 
   <div>
-    <p class="sansserif">We are a trio from Sheffield University, eager to make research on the go easier!</p>
-    <p class="sansserif">Have you ever wanted a <em>frozen</em> copy of your <em>Twitter</em> search delivered to your inbox, so    that you can download it and read it on demand?</p>
-    <p class="sansserif">...on the bus?</p>
-    <p class="sansserif">...in a cafe?</p>
-    <p class="sansserif">...on the beach?</p>
-    <p class="sansserif">Just enter the hashtag and the email you would like the search results sent to and we'll take it from there!</p>
+    <p> class="sansserif">We are a trio from Sheffield University, eager to make research on the go easier!</p>
+    <p> class="sansserif">Have you ever wanted a frozen copy of your Twitter search delivered straight to your inbox, aong with some analytics?</p>
+    <p>   So that you can download it and read it on demand?</p>
+    <p> class="sansserif">...on the bus?</p>
+    <p> class="sansserif">...in a cafe?</p>
+    <p> class="sansserif">...on the beach?</p>
+    <p> class="sansserif">Just enter the hashtag and the email you would like the search results sent to and we'll take it from there!</p>
   </div>
 
   <!-- from hello.py user-entry-form part-->
