--- a/allok.html
+++ b/allok.html
@@ -52,12 +52,11 @@ background-color: #4682b4;
   </div>
 
   <div>
-    <p class="sansserif">Thank you for your request!</p>
-    <p class="sansserif">We are sending you a text file,</p>
-    <p class="sansserif">...in the mean time, here is some analysis on your hashtag!</p>
+    <p class="sansserif">Thank you for your request,</p>
+    <p class="sansserif">We are sending your analysis!</p>
   </div>
 
-  <!-- insert 3 analytics as images -->
+  <!-- insert 3 analytics as images 
 
   <div>
 <img src="@Url.Content("image1.jpg")" alt="" align="left" />
@@ -67,18 +66,17 @@ background-color: #4682b4;
 <img src="@Url.Content("image3.jpg")" alt="" align="right"/>
 </div>
 
-
 <style type="text/css">
 #content {
-
 
 width:50%;
 margin-left: auto ;
 margin-right:auto ;
 
-
 }
-
+-->
+   
+   
 </body>
 
 </html>
