--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@ background-color: #4682b4;
 
   <div>
     <p> class="sansserif">We are a trio from Sheffield University, eager to make research on the go easier!</p>
-    <p> class="sansserif">Have you ever wanted a frozen copy of your Twitter search delivered straight to your inbox, aong with some analytics?</p>
+    <p> class="sansserif">Have you ever wanted a frozen copy of your Twitter search delivered straight to your inbox, 
+       along with some analytics?</p>
     <p>   So that you can download it and read it on demand?</p>
     <p> class="sansserif">...on the bus?</p>
     <p> class="sansserif">...in a cafe?</p>
