--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ background-color: #4682b4;
     <p> class="sansserif">...in a cafe?</p>
     <p> class="sansserif">...on the beach?</p>
     <p> class="sansserif">Just enter the hashtag and the email you would like the search results sent to and we'll take it from there!</p>
+    <p> class="sansserif">We send you all the tweets from the last 15 minutes and some data analytics.</p>
   </div>
 
   <!-- from hello.py user-entry-form part-->
